--- a/index.html
+++ b/index.html
@@ -1,55 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <title>Teste Din Digital</title>
 </head>
+
 <body>
-   <header id="navbar">
-    <img src="./assets/logo1.png" />
-    
-    <nav>
+    <header id="navbar">
+        <img src="./assets/logo1.png" />
 
-        <ul id="navbar-list">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Faq</a></li>
-            <li><a href="#">Contact</a></li>
+        <nav>
 
-        </ul>
-    </nav>
+            <ul id="navbar-list">
+                <li><a href="#" id="home">Home</a></li>
+                <li><a href="#">Product</a></li>
+                <li><a href="#">Faq</a></li>
+                <li><a href="#">Contact</a></li>
 
-   </header>
-   <main>
-       <section id="banner-section">
-       <div id="main-banner1">
-           <div id="banner-info"></div>
-           <h3>Food app</h3>
-           <h1>Why stay hungry when you can order from Bella Onojie</h1>
-            <img src="./assets/banner1.png">
-            <h4>Download the bella onoje’s food app now on</h4>
-       </div> 
-       <div>
-           <button id="playStore">Playstore</button>
-           <button id="appstore">App store</button>
-       </div>
-       </section>
+            </ul>
+        </nav>
 
-           <div id="cards">
+    </header>
+    <main>
+        <section id="banner-section">
+            <div id="main-banner1">
+                    <img src="./assets/banner1.png" style="width:100%;">
+                <div id="banner-info">
+                    <h3>Food app</h3>
+                    <h6>Why stay hungry when you can order from Bella Onojie</h6>
+                    <p>Download the bella onoje’s food app now on</p>
+                    <div>
+                        <button id="playStore">Playstore</button>
+                        <button id="appstore">App store</button>
+                    </div>
+                </div>
+            </div>
+      
+        </section>
+
+        <div id="cards">
             <img src="./assets/headerimage1.png">
             <img src="./assets/headerimage2.png">
 
-           </div>
-           <div id="divider"></div>
-           <div>
-               <h2>How the app works</h2>
-           </div>
-           <div></div>
-       </section>
+        </div>
+        <div id="divider"></div>
+        <div>
+            <h2>How the app works</h2>
+        </div>
+        <div id="api-content"></div>
+        </section>
 
     </main>
+    <div id="banner2">
+        <img src="./assets/banner2.png" />
+        <h2>Download the app now.</h2>
+        <h4>Available on your favorite store. Start your premium experience now</h4>
+        <button id="playstore2">Playstore</button>
+        <button id="appstore2">App store</button>
+    </div>
+    <footer>
+        <img src="./assets/logo1.png" alt="logo">
+        <img src="./assets/twitter.png" alt="twitter">
+        <img src="./assets/facebook.png" alt="facebook">
+        <img src="./assets/instagram.png" alt="instagram">
+        <img src="./assets/copywright.png" alt="copywright">
+        </footer>
+
+    <script src="index.js"></script>
 </body>
-    </html>
+
+</html>
